Fixed blockquotes titles too dark with dark mode

--- a/docsite/_sass/color_schemes/custom_dark.scss
+++ b/docsite/_sass/color_schemes/custom_dark.scss
@@ -37,6 +37,45 @@
 // Blockquote fixing
 // Since blockquote titles in dark mode result too dark due to a bug that prevents lighter colors to opt in, we tacke the problem by manually defining lighter colors and applying them to the blockquote titles via inline css.
 // DO NOT FORGET INLINE CSS FOR <p></p>!
+// Note that with this fix you are forced not to use the default title configured in the "_config.yml" file.
+
+// Big example
+/*
+{: .motto-title } 
+> <p class="blockquote-title-fixer-purple">tl;dr</p>
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+
+{: .note-title } 
+> <p class="blockquote-title-fixer-blue">tl;dr</p>
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+
+{: .generic-purpose-highlighting-grey-lt-title } 
+> tl;dr
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+
+{: .generic-purpose-highlighting-grey-dk-title } 
+> <p class="blockquote-title-fixer-grey-dk">tl;dr</p>
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+
+{: .generic-purpose-highlighting-green-title } 
+> <p class="blockquote-title-fixer-green">tl;dr</p>
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+
+{: .warning-title } 
+> tl;dr
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+
+{: .critical-warning-title } 
+> tl;dr
+>
+> Piattaforma Open Source modulare per trasformare un classico specchio in un sistema digitale multifunzione ad interazione passiva, dove l'immaginazione è l'unico limite.
+*/
 
 // Fixing purple
 .blockquote-title-fixer-purple {
